--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,110 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.App {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+body {
+  background-color: #9DF1DF;
+}
+
+.block {
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+img {
+  width: 420px;
+}
+
+.cartIcon {
+  width: 70px;
+}
+
+.categoryButton:hover {
+  background-color: #FFEA20;
+}
+
+.categoryButtonSelected {
+  background-color: #62B6B7;
+}
+
+.categoryButton {
+  cursor: pointer;
+  margin: 5px;
+  padding: 5px;
+}
+
+.icon {
+  width: 20px;
+}
+
+p, h2, h3, button {
+  font-size: 20px;
+  font-family: 'Poppins', sans-serif;
+}
+
+h1 {
+  color: #3D5656;
+  text-shadow: 1px 2px 1px #FFEA20;
+  text-transform: uppercase;
+  font-size: 30px;
+  font-family: 'Poppins', sans-serif;
+}
+
+button {
+  background-color: #fdeb6b;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 5px;
+  border: 2px solid #03C988;
+  border-radius: 5px;
+}
+
+.desc {
+  font-size: 15px;
+  margin: 0;
+}
+
+.btn {
+  padding: 2px;
+  font-size: 10px;
+}
+
+.addtocart {
+  padding: 4px;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+@media all and (max-width: 800px) {
+  .desc {
+    margin-left: 12px;
+    margin-right: 12px;
+    font-size: 20px;
+  }
+
+  img {
+    width: 520px;
+  }
+}
+
+@media all and (max-width: 500px) {
+  .desc {
+    margin-left: 12px;
+    margin-right: 12px;
+    font-size: 12px;
+  }
+
+  img {
+    width: 350px;
+  }
+
+  h1 {
+    font-size: 20px;
+  }
+}
